@startuml
'https://plantuml.com/class-diagram

title View Airport's details by IATA Code: Architecture — Class Diagram

package "Airport Aggregate" <<rectangle>> {
    class Airport <<root>> {
        - String name
        - LocationIdentifier iata
        - AirportType airport_type
        - Coordinates coordinates
        - AirportLocation airport_location
        - TimeZone time_zone
        - OperationalHours operational_hours
        - List<RunwayInfo> runway_info
        - AirportStatus status
        - List<ContactInfo> contact_info
        - List<AirportTerminal> terminals
        - List<AirportGate> gates
        - List<AirportService> services
        - List<String> images
        - Set<AircraftModel> certified_models
        ---
    }

    interface AirportRepository {
        + Optional<Airport> findByIata(LocationIdentifier iata)
    }

    class ViewAirportDetailsService <<Domain Service>> {
        + Airport getDetails(Airport)
    }

    class ViewAirportDetailsUseCase <<@UseCase>> {
        + Airport execute(LocationIdentifier iata)
    }

    ViewAirportDetailsUseCase ..> AirportRepository : findByIata() >
    ViewAirportDetailsUseCase ..> ViewAirportDetailsService : delegates to >
}

@enduml